# system-modelling

./: .gitignore  .pylintrc  .style.yapf
coursework/: analysis.ipynb  main.py  requirements.txt
coursework/workshop/: __init__.py  base.py  common.py  factory.py  logger.py  model.py  queueing.py  transition.py
cw1/: bank.py  distribution.py  requirements.txt
lw1/: lw1.ipynb  requirements.txt
lw2/: common.py  create.py  element.py  main.py  model.py  process.py
lw3/: bank.py  hospital.py  requirements.txt  system.py  workshop.py
lw3/bank/: queueing.py  transition.py
lw3/hospital/: base.py  factory.py  queueing.py  transition.py
lw3/lib/: base.py  common.py  factory.py  logger.py  model.py  queueing.py  transition.py
lw3/src/bank/: __init__.py  logger.py  queueing.py  transition.py
lw3/src/hospital/: __init__.py  base.py  common.py  factory.py  logger.py  model.py  queueing.py  transition.py  utils.py
lw3/src/lib/: base.py  common.py  factory.py  logger.py  model.py  queueing.py  transition.py
lw3/src/workshop/: __init__.py  base.py  factory.py  logger.py  queueing.py  transition.py
lw4/: main.py  requirements.txt
lw5/: 1.pns  2_1.pns  2_2.pns  3.pns  4.pns  README
lw6/: 4.pns
lw7/: 4.pns  ManufacturingSystem.java  NetLibrary.java  README.md  TransportSystem.java
qnet/: pyproject.toml
qnet/qnet/: base.py  common.py  dist.py  factory.py  logger.py  model.py  node.py  queueing.py  transition.py  utils.py
